Squashed: some findbugs errors